@@ -100,6 +100,7 @@ dependencies {
 	javadocClasspath(libs.picocli)
 	javadocClasspath(libs.fastcsv)
 	javadocClasspath(libs.openTestReporting.events)
+	javadocClasspath(libs.jakarta.json.api)
 	javadocClasspath(libs.kotlinx.coroutines.core)
 	javadocClasspath(kotlin("stdlib"))
 	javadocClasspath(kotlin("reflect"))
@@ -406,10 +407,11 @@ tasks {
 
 		args.addAll(
 			"--module", modularProjects.joinToString(",") { it.javaModuleName },
-			"--add-modules", "info.picocli,org.opentest4j.reporting.events,de.siegmar.fastcsv",
+			"--add-modules", "info.picocli,org.opentest4j.reporting.events,de.siegmar.fastcsv,jakarta.json",
 			"--add-reads", "org.junit.platform.console=info.picocli",
 			"--add-reads", "org.junit.platform.reporting=org.opentest4j.reporting.events",
 			"--add-reads", "org.junit.jupiter.params=de.siegmar.fastcsv",
+			"--add-reads", "org.junit.platform.configuration.processor=jakarta.json",
 		)
 
 		outputDirectory = layout.buildDirectory.dir("docs/javadoc")
